# anyd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.py
.github/workflows/: cd.yml  ci.yml  testing.yml  testing.yml~
anyd/: core.py
sockets_framework/: __init__.py  cli.py  core.py
tests/: core.py  sockets_framework.py  sockets_framework_test.py  test_cli.py  test_core.py  test_module01.py  test_module02.py  test_sockets_framework.py
