[tool.poetry]
name = "sockets-framework"
version = "0.1.0"
description = ""
authors = ["Anatolio Nikiforidis <nikiforova693@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/anatolio-deb/sockets-framework"
repository = "https://github.com/anatolio-deb/sockets-framework"
keywords = ["ipc", "sockets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
yapf = "^0.30.0"
pytest = "^6.2.2"

[tool.poetry.scripts]
sockets_framework = 'sockets_framework:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
