[tool.poetry]
name = "sockets-framework"
version = "0.3.1"
description = "A tiny framework for easy building customized IPC servers"
authors = ["Anatolio Nikiforidis <nikiforova693@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anatolio-deb/sockets-framework"
repository = "https://github.com/anatolio-deb/sockets-framework"
keywords = ["ipc", "sockets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.3.0"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.4"

[tool.poetry.scripts]
sockets_framework = 'sockets_framework.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
